kubernetes/main/apps/ai/openclaw/app/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: openclaw
  namespace: ai
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: openclaw
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: traefik
            app.kubernetes.io/instance: traefik
            io.kubernetes.pod.namespace: networking
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
        - ports:
            - port: "443"
              protocol: TCP
        - ports:
            - port: "18789"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    #- toFQDNs:
    #    - matchName: api.anthropic.com
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
